--- a/src/HN.Bangumi.Uwp.17763/App.xaml
+++ b/src/HN.Bangumi.Uwp.17763/App.xaml
@@ -15,6 +15,9 @@
             <localConverters:IsNullToVisibilityConverter x:Key="InversedIsNullToVisibilityConverter"
                                                          IsInversed="True" />
             <localConverters:SubjectNameConverter x:Key="SubjectNameConverter" />
+            <localConverters:CharacterNameConverter x:Key="CharacterNameConverter" />
+            <localConverters:StaffNameConverter x:Key="StaffNameConverter" />
+            <localConverters:MultiplyConverter x:Key="MultiplyConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
