--- a/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
@@ -1,9 +1,49 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.ProgressView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:HN.Bangumi.Uwp.Controls"
+      xmlns:core="using:Microsoft.Xaml.Interactions.Core"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       DataContext="{Binding Source={StaticResource Locator}, Path=Progress}"
       mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <GridView Padding="12,12,0,0"
+                  IsItemClickEnabled="True"
+                  ItemClick="SubjectGridView_ItemClick"
+                  ItemsSource="{Binding Path=Collection}">
+            <interactivity:Interaction.Behaviors>
+                <core:EventTriggerBehavior EventName="ItemClick">
+                    <core:InvokeCommandAction Command="{Binding Path=ItemClickCommand}"
+                                              InputConverter="{StaticResource ItemClickEventArgsConverter}" />
+                </core:EventTriggerBehavior>
+            </interactivity:Interaction.Behaviors>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <controls:SubjectItem Grid.Row="0"
+                                              DataContext="{Binding Path=Subject}" />
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.ItemContainerStyle>
+                <Style TargetType="SelectorItem">
+                    <Setter Property="Margin"
+                            Value="0,0,12,12" />
+                </Style>
+            </ItemsControl.ItemContainerStyle>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsWrapGrid HorizontalAlignment="Center"
+                                   Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </GridView>
+        <controls:AppLoadingControl IsLoading="{Binding Path=IsLoading}" />
+    </Grid>
 </Page>
