--- a/src/HN.Bangumi.Uwp.17763/Views/ShellView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/ShellView.xaml
@@ -1,9 +1,11 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.ShellView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:controls="using:HN.Bangumi.Uwp.Controls"
+      xmlns:uwp="using:FontAwesome5.UWP"
+      Background="#E3E3E3"
       DataContext="{Binding Source={StaticResource Locator}, Path=Shell}"
       mc:Ignorable="d">
     <Grid>
@@ -16,48 +18,56 @@
                                 QuerySubmitted="AutoSuggestBox_QuerySubmitted" />
             </NavigationView.AutoSuggestBox>
             <NavigationView.PaneCustomContent>
-                <Grid>
-                    <Grid Visibility="{Binding Path=IsSignIn, Converter={StaticResource InversedBooleanToVisibilityConverter}}">
-                        <Button Command="{Binding Path=SignInCommand}"
-                                Content="登录" />
+                <Grid Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0"
+                          Width="40"
+                          Height="40"
+                          HorizontalAlignment="Left">
+                        <Ellipse Width="32"
+                                 Height="32">
+                            <Ellipse.Fill>
+                                <ImageBrush ImageSource="{Binding Path=User.Avatar.Small}" />
+                            </Ellipse.Fill>
+                        </Ellipse>
                     </Grid>
-                    <Grid Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <Grid Grid.Column="0"
-                              Width="40"
-                              Height="40"
-                              HorizontalAlignment="Left">
-                            <Ellipse Width="32"
-                                     Height="32">
-                                <Ellipse.Fill>
-                                    <ImageBrush ImageSource="{Binding Path=User.Avatar.Small}" />
-                                </Ellipse.Fill>
-                            </Ellipse>
-                        </Grid>
-                        <TextBlock Grid.Column="1"
-                                   Margin="8,0,0,0"
-                                   VerticalAlignment="Center"
-                                   Text="{Binding Path=User.Nickname}" />
-                        <Button Grid.Column="2"
-                                Command="{Binding Path=SignOutCommand}">
-                            <SymbolIcon Symbol="ZoomOut" />
-                        </Button>
-                    </Grid>
+                    <TextBlock Grid.Column="1"
+                               Margin="8,0,0,0"
+                               VerticalAlignment="Center"
+                               Text="{Binding Path=User.Nickname}" />
                 </Grid>
             </NavigationView.PaneCustomContent>
             <NavigationView.MenuItems>
+                <NavigationViewItem Content="登录"
+                                    SelectsOnInvoked="False"
+                                    Tag="SignIn"
+                                    Visibility="{Binding Path=IsSignIn, Converter={StaticResource InversedBooleanToVisibilityConverter}}">
+                    <NavigationViewItem.Icon>
+                        <uwp:FontAwesome Icon="Solid_SignInAlt" />
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
                 <NavigationViewItem Content="我的进度"
-                                    Icon="ProtectedDocument"
                                     Tag="Progress"
-                                    Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                                    Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <NavigationViewItem.Icon>
+                        <uwp:FontAwesome Icon="Solid_Tasks" />
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
                 <NavigationViewItem Content="每日放送"
                                     Icon="Calendar"
                                     Tag="Calendar" />
-                <NavigationViewItemHeader Content="aaa" />
+                <NavigationViewItemSeparator Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                <NavigationViewItem Content="登出"
+                                    SelectsOnInvoked="False"
+                                    Tag="SignOut"
+                                    Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <NavigationViewItem.Icon>
+                        <uwp:FontAwesome Icon="Solid_SignOutAlt" />
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
             </NavigationView.MenuItems>
             <Frame x:Name="ContentFrame" />
         </NavigationView>
