--- a/src/HN.Bangumi.Uwp.17763/Views/SubjectView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/SubjectView.xaml
@@ -1,40 +1,144 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.SubjectView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       DataContext="{Binding Source={StaticResource Locator}, Path=Subject}"
       mc:Ignorable="d">
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <SuppressNavigationTransitionInfo />
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
     <Grid>
-        <Pivot>
-            <PivotItem Header="角色信息">
-                <GridView ItemsSource="{Binding Path=Subject.Crt}"
-                          IsItemClickEnabled="False"
-                          SelectionMode="None">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
-                                <Image Source="{Binding Path=Images.Small}" Grid.Row="0"></Image>
-                                <TextBlock Text="{Binding Path=Name}" Grid.Row="1"></TextBlock>
-                            </Grid>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </GridView>
-            </PivotItem>
-            <PivotItem Header="doge">
-                <ScrollViewer>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Subject.Summary}" />
-                        <Image Source="{Binding Path=Subject.Images.Small}" />
-                    </StackPanel>
-                </ScrollViewer>
-            </PivotItem>
-        </Pivot>
+        <ScrollViewer Padding="12">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <Grid VerticalAlignment="Top">
+                            <Image x:Name="SubjectImage"
+                                   Width="150"
+                                   Height="214"
+                                   Source="{Binding Path=Subject.Images.Common}"
+                                   Stretch="Uniform" />
+                        </Grid>
+                    </Grid>
+                    <Grid x:Name="DescriptionGrid"
+                          Grid.Column="1"
+                          Margin="12,0,0,0">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock FontSize="30" TextWrapping="Wrap"
+                                       IsTextSelectionEnabled="True"
+                                       Text="{Binding Path=Subject, Converter={StaticResource SubjectNameConverter}}" />
+                            <TextBlock IsTextSelectionEnabled="True"
+                                       Text="{Binding Path=Subject.Summary}"
+                                       TextWrapping="Wrap" />
+                        </StackPanel>
+                    </Grid>
+                </Grid>
+                <Pivot Grid.Row="1">
+                    <PivotItem Padding="0,12,0,0"
+                               Header="章节">
+                        <GridView IsItemClickEnabled="True"
+                                  ItemsSource="{Binding Path=Subject.Eps}"
+                                  ScrollViewer.VerticalScrollMode="Disabled">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:EpItem />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="SelectorItem">
+                                    <Setter Property="HorizontalContentAlignment"
+                                            Value="Stretch" />
+                                    <Setter Property="VerticalContentAlignment"
+                                            Value="Stretch" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </GridView>
+                    </PivotItem>
+                    <PivotItem Padding="0,12,0,0"
+                               Header="角色介绍">
+                        <GridView ItemsSource="{Binding Path=Subject.Crt}"
+                                  ScrollViewer.VerticalScrollMode="Disabled">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:CharacterItem />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="SelectorItem">
+                                    <Setter Property="Margin"
+                                            Value="0,0,12,12" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </GridView>
+                    </PivotItem>
+                    <PivotItem Padding="0,12,0,0"
+                               Header="制作人员">
+                        <GridView ItemsSource="{Binding Path=Subject.Staff}"
+                                  ScrollViewer.VerticalScrollMode="Disabled">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:StaffItem />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="SelectorItem">
+                                    <Setter Property="Margin"
+                                            Value="0,0,12,12" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </GridView>
+                    </PivotItem>
+                    <PivotItem Padding="0,12,0,0"
+                               Header="讨论">
+                        <ListView ItemsSource="{Binding Path=Subject.Topic}"
+                                  ScrollViewer.VerticalScrollMode="Disabled">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:TopicItem />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="SelectorItem">
+                                    <Setter Property="HorizontalContentAlignment"
+                                            Value="Stretch" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </ListView>
+                    </PivotItem>
+                    <PivotItem Padding="0,12,0,0"
+                               Header="评论日志">
+                        <ListView ItemsSource="{Binding Path=Subject.Blog}"
+                                  ScrollViewer.VerticalScrollMode="Disabled">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:BlogItem />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemContainerStyle>
+                                <Style TargetType="SelectorItem">
+                                    <Setter Property="HorizontalContentAlignment"
+                                            Value="Stretch" />
+                                </Style>
+                            </ItemsControl.ItemContainerStyle>
+                        </ListView>
+                    </PivotItem>
+                </Pivot>
+            </Grid>
+        </ScrollViewer>
         <controls:AppLoadingControl IsLoading="{Binding Path=IsLoading}" />
     </Grid>
 </Page>
