--- a/src/HN.Bangumi.Uwp.17763/Views/SubjectView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/SubjectView.xaml
@@ -38,9 +38,10 @@
                           Grid.Column="1"
                           Margin="12,0,0,0">
                         <StackPanel Orientation="Vertical">
-                            <TextBlock FontSize="30" TextWrapping="Wrap"
+                            <TextBlock FontSize="30"
                                        IsTextSelectionEnabled="True"
-                                       Text="{Binding Path=Subject, Converter={StaticResource SubjectNameConverter}}" />
+                                       Text="{Binding Path=Subject, Converter={StaticResource SubjectNameConverter}}"
+                                       TextWrapping="Wrap" />
                             <TextBlock IsTextSelectionEnabled="True"
                                        Text="{Binding Path=Subject.Summary}"
                                        TextWrapping="Wrap" />
