--- a/src/HN.Bangumi.Uwp.17763/Views/CalendarView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/CalendarView.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.CalendarView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:core="using:Microsoft.Xaml.Interactions.Core"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,7 +22,8 @@
             <Pivot.ItemTemplate>
                 <DataTemplate>
                     <PivotItem>
-                        <GridView IsItemClickEnabled="True"
+                        <GridView animations:ReorderGridAnimation.Duration="250"
+                                  IsItemClickEnabled="True"
                                   ItemClick="SubjectGridView_ItemClick"
                                   ItemsSource="{Binding Path=Items}">
                             <interactivity:Interaction.Behaviors>
