--- a/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.ProgressView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:core="using:Microsoft.Xaml.Interactions.Core"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,6 +11,7 @@
       mc:Ignorable="d">
     <Grid>
         <GridView Padding="12,12,0,0"
+                  animations:ReorderGridAnimation.Duration="250"
                   IsItemClickEnabled="True"
                   ItemClick="SubjectGridView_ItemClick"
                   ItemsSource="{Binding Path=Collection}">
