--- a/src/HN.Bangumi.Uwp.17763/Views/SearchView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/SearchView.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.SearchView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:core="using:Microsoft.Xaml.Interactions.Core"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,6 +24,7 @@
                        Header="动画">
                 <Grid>
                     <GridView x:Name="AnimeGridView"
+                              animations:ReorderGridAnimation.Duration="250"
                               IsItemClickEnabled="True"
                               ItemClick="SubjectGridView_ItemClick"
                               ItemsSource="{Binding Path=Animes}"
@@ -52,6 +54,7 @@
                        Header="书籍">
                 <Grid>
                     <GridView x:Name="BookGridView"
+                              animations:ReorderGridAnimation.Duration="250"
                               IsItemClickEnabled="True"
                               ItemClick="SubjectGridView_ItemClick"
                               ItemsSource="{Binding Path=Books}"
@@ -81,6 +84,7 @@
                        Header="音乐">
                 <Grid>
                     <GridView x:Name="MusicGridView"
+                              animations:ReorderGridAnimation.Duration="250"
                               IsItemClickEnabled="True"
                               ItemClick="SubjectGridView_ItemClick"
                               ItemsSource="{Binding Path=Musics}"
@@ -110,6 +114,7 @@
                        Header="游戏">
                 <Grid>
                     <GridView x:Name="GameGridView"
+                              animations:ReorderGridAnimation.Duration="250"
                               IsItemClickEnabled="True"
                               ItemClick="SubjectGridView_ItemClick"
                               ItemsSource="{Binding Path=Games}"
