--- a/src/HN.Bangumi.Uwp.17763/Views/SubjectView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/SubjectView.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.SubjectView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -71,7 +72,8 @@
                     </PivotItem>
                     <PivotItem Padding="0,12,0,0"
                                Header="角色介绍">
-                        <GridView ItemsSource="{Binding Path=Subject.Crt}"
+                        <GridView animations:ReorderGridAnimation.Duration="250"
+                                  ItemsSource="{Binding Path=Subject.Crt}"
                                   ScrollViewer.VerticalScrollMode="Disabled">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
@@ -88,7 +90,8 @@
                     </PivotItem>
                     <PivotItem Padding="0,12,0,0"
                                Header="制作人员">
-                        <GridView ItemsSource="{Binding Path=Subject.Staff}"
+                        <GridView animations:ReorderGridAnimation.Duration="250"
+                                  ItemsSource="{Binding Path=Subject.Staff}"
                                   ScrollViewer.VerticalScrollMode="Disabled">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
