--- a/src/HN.Bangumi.Uwp.17763/Controls/StaffItem.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Controls/StaffItem.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="HN.Bangumi.Uwp.Controls.StaffItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="using:HN.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:models="using:HN.Bangumi.API.Models"
@@ -8,21 +9,29 @@
              d:DesignHeight="300"
              d:DesignWidth="400"
              mc:Ignorable="d">
-    <Grid>
+    <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0"
               Width="162"
               Height="162">
-            <Image Source="{Binding Path=Images.Medium}"
-                   Stretch="UniformToFill" />
+            <controls:ImageEx Source="{Binding Path=Images.Medium}"
+                              Stretch="UniformToFill" />
         </Grid>
         <Grid Grid.Row="1"
               Width="162"
               Padding="8,4,8,4">
-            <TextBlock Text="{Binding Converter={StaticResource StaffNameConverter}}"
+            <TextBlock x:Name="PlaceholderTextBlock"
+                       AutomationProperties.AccessibilityView="Raw"
+                       Foreground="{x:Null}"
+                       IsHitTestVisible="False"
+                       MaxLines="2"
+                       Opacity="0"><Run Text="Xg" /><LineBreak /><Run Text="Xg" /></TextBlock>
+            <TextBlock MaxLines="2"
+                       Text="{Binding Converter={StaticResource StaffNameConverter}}"
+                       TextTrimming="CharacterEllipsis"
                        TextWrapping="Wrap" />
         </Grid>
     </Grid>
