--- a/src/HN.Bangumi.Uwp.17763/Controls/CharacterItem.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Controls/CharacterItem.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="HN.Bangumi.Uwp.Controls.CharacterItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="using:HN.Controls"
              xmlns:core="using:Microsoft.Xaml.Interactions.Core"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
@@ -18,8 +19,8 @@
         <Grid Grid.Row="0"
               Width="162"
               Height="162">
-            <Image Source="{Binding Path=Images.Medium}"
-                   Stretch="UniformToFill" />
+            <controls:ImageEx Source="{Binding Path=Images.Medium}"
+                              Stretch="UniformToFill" />
             <Border x:Name="RoleNameBorder"
                     Margin="8,0,0,8"
                     Padding="6,3,6,3"
