--- a/src/HN.Bangumi.Uwp.17763/Themes/Generic.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Themes/Generic.xaml
@@ -1,6 +1,9 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Controls/AppLoadingControl.xaml" />
+        <ResourceDictionary Source="/Controls/CharacterItem2.xaml" />
+        <ResourceDictionary Source="/Controls/EpItem2.xaml" />
+        <ResourceDictionary Source="/Controls/EpProgressControl.xaml" />
         <ResourceDictionary Source="/Controls/ToastPrompt.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
